--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <body>
     <parent-container class="grid grid-cols-4 gap-4">
       <!-- left side -->
-      <div class="p-4 col-span-3 grid grid-cols-2 gap-6">
+      <left class="left p-4 col-span-3 grid grid-cols-2 gap-6">
         <!-- navbar + profile -->
         <nav class="nav col-span-2 flex gap-6 w-full justify-between">
           <ul class="links items-center flex gap-6 justify-between">
@@ -158,7 +158,9 @@
 
         <!-- employee overview  -->
 
-        <div class="p-3 col-span-1 border border-gray-200 rounded-[20px]">
+        <div
+          class="p-3 col-span-1 border border-gray-200 rounded-[20px] emp-details"
+        >
           <div class="flex justify-between items-center p-2">
             <p class="text-xl font-medium text-black items-center">
               Employee Overview
@@ -208,7 +210,9 @@
         </div>
         <!-- work performance  -->
 
-        <div class="p-3 col-span-1 border border-gray-200 rounded-[20px]">
+        <div
+          class="p-3 col-span-1 border border-gray-200 rounded-[20px] emp-details"
+        >
           <div class="flex justify-between items-center p-2">
             <p class="text-xl font-medium text-black items-center">
               Work Performance
@@ -232,7 +236,9 @@
         </div>
 
         <!-- employee overview -->
-        <div class="col-span-2 border border-gray-200 rounded-[20px]">
+        <div
+          class="col-span-2 border border-gray-200 rounded-[20px] emp-details1"
+        >
           <!-- heading + 2 btns -->
           <div class="p-2 flex justify-between items-center m-2 mb-0 pb-0">
             <p class="text-xl font-medium text-black items-center">
@@ -405,10 +411,10 @@
             </div>
           </div>
         </div>
-      </div>
+      </left>
 
       <!-- right side -->
-      <div class="p-3 col-span-1 border border-gray-200 mb-4">
+      <right class="right p-3 col-span-1 border border-gray-200 mb-4">
         <!-- search bar input  -->
         <form class="max-w-md mx-auto">
           <label
@@ -584,7 +590,7 @@
             >Start At 07:38</span
           >
         </div>
-      </div>
+      </right>
     </parent-container>
 
     <!-- flowbite cdn  -->
