--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
       <!-- right side -->
       <right class="right p-3 col-span-1 border border-gray-200 mb-4">
         <!-- search bar input  -->
-        <form class="max-w-md mx-auto">
+        <form class="max-w-md mx-auto search-input">
           <label
             for="default-search"
             class="mb-2 text-sm font-medium text-gray-900 sr-only"
@@ -459,7 +459,7 @@
         </form>
 
         <!-- upcoming meetings  -->
-        <div class="p-2 mt-2 flex justify-between">
+        <div class="p-2 mt-2 flex justify-between upcoming-meetings">
           <span class="text-gray-400"
             >Upcoming Meetings
 
@@ -473,11 +473,11 @@
 
         <!-- date -->
 
-        <span class="text-gray-400 p-2 flex items-center">
+        <span class="text-gray-400 p-2 flex items-center meeting-date">
           <i class="ph ph-calendar text-xl mr-1"></i>Monday 3, 2025
         </span>
         <!-- meetings with ppl  -->
-        <div class="grid grid-cols-7 items-center">
+        <div class="grid grid-cols-7 items-center meet-person">
           <i class="ph ph-user-circle text-[60px]"></i>
           <div class="col-span-5 ml-4">
             <p class="font-medium text-lg pb-0">Laila</p>
@@ -486,7 +486,7 @@
           <i class="ph ph-atom text-5xl"></i>
         </div>
 
-        <div class="grid grid-cols-7 items-center">
+        <div class="grid grid-cols-7 items-center meet-person">
           <i class="ph ph-user-circle text-[60px]"></i>
           <div class="col-span-5 ml-4">
             <p class="font-medium text-lg pb-0">Karlo</p>
@@ -497,11 +497,11 @@
 
         <!-- date -->
 
-        <span class="text-gray-400 p-2 flex items-center">
+        <span class="text-gray-400 p-2 flex items-center meeting-date">
           <i class="ph ph-calendar text-xl mr-1"></i>Tuesday 4, 2025
         </span>
         <!-- meetings with ppl  -->
-        <div class="grid grid-cols-7 items-center">
+        <div class="grid grid-cols-7 items-center meet-person">
           <i class="ph ph-user-circle text-[60px]"></i>
           <div class="col-span-5 ml-4">
             <p class="font-medium text-lg pb-0">Daniel Kim</p>
