--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>🦋Dashboard UI Practice by Shivangi</title>
     <link rel="stylesheet" href="style.css" />
 
     <link
@@ -477,37 +477,63 @@
           <i class="ph ph-calendar text-xl mr-1"></i>Monday 3, 2025
         </span>
         <!-- meetings with ppl  -->
-        <div class="grid grid-cols-7 items-center meet-person">
-          <i class="ph ph-user-circle text-[60px]"></i>
-          <div class="col-span-5 ml-4">
-            <p class="font-medium text-lg pb-0">Laila</p>
-            <p class="font-light">Front End Engineer</p>
+        <div class="flex items-center meet-person w-full justify-between p-1">
+          <div class="picture-name flex">
+            <img
+              class="w-15 h-15 rounded-full object-cover"
+              src="https://cdn.pixabay.com/photo/2014/10/01/16/36/siamese-468814_1280.jpg"
+              alt=""
+            />
+            <div class="col-span-5 ml-4">
+              <p class="font-medium text-lg pb-0">Laila</p>
+              <p class="font-light">Front End Engineer</p>
+            </div>
           </div>
-          <i class="ph ph-atom text-5xl"></i>
+          <!-- <i class="ph ph-atom text-5xl flex justify-end"></i> -->
         </div>
 
-        <div class="grid grid-cols-7 items-center meet-person">
-          <i class="ph ph-user-circle text-[60px]"></i>
-          <div class="col-span-5 ml-4">
-            <p class="font-medium text-lg pb-0">Karlo</p>
-            <p class="font-light">Designer</p>
+        <div class="flex items-center meet-person w-full justify-between p-1">
+          <div class="picture-name flex">
+            <img
+              class="w-15 h-15 rounded-full object-cover"
+              src="https://cdn.pixabay.com/photo/2018/07/28/09/23/woman-3567600_1280.jpg"
+              alt=""
+            />
+            <div class="col-span-5 ml-4">
+              <p class="font-medium text-lg pb-0">Kacey</p>
+              <p class="font-light">UX Researcher</p>
+            </div>
           </div>
-          <i class="ph ph-atom text-5xl"></i>
+          <!-- <i class="ph ph-atom text-5xl flex justify-end"></i> -->
         </div>
-
         <!-- date -->
 
         <span class="text-gray-400 p-2 flex items-center meeting-date">
           <i class="ph ph-calendar text-xl mr-1"></i>Tuesday 4, 2025
         </span>
         <!-- meetings with ppl  -->
-        <div class="grid grid-cols-7 items-center meet-person">
+        <!-- <div class="grid grid-cols-7 items-center meet-person">
           <i class="ph ph-user-circle text-[60px]"></i>
           <div class="col-span-5 ml-4">
             <p class="font-medium text-lg pb-0">Daniel Kim</p>
             <p class="font-light">Data Engineer</p>
           </div>
           <i class="ph ph-atom text-5xl"></i>
+        </div> -->
+
+        <div class="flex items-center meet-person w-full justify-between p-1">
+          <div class="picture-name flex">
+            <img
+              class="w-15 h-15 rounded-full object-cover"
+              src="https://cdn.pixabay.com/photo/2016/06/20/04/30/asian-man-1468032_1280.jpg"
+              alt=""
+            />
+            <div class="col-span-5 ml-4">
+              <p class="font-medium text-lg pb-0">Daniel Kim</p>
+              <p class="font-light">Data Engineer</p>
+            </div>
+          </div>
+          <!-- <i class="ph ph-atom text-5xl flex justify-end"></i> -->
         </div>
 
         <!-- open positions  -->
