--- a/index.html
+++ b/index.html
@@ -32,19 +32,58 @@
             <li class="flex justify-center">
               <i class="flower ph ph-flower-lotus text-4xl"></i>
             </li>
-            <li class="">Dashboard</li>
-            <li class="">Task</li>
-            <li class="">Candidate</li>
-            <li class="">Performance</li>
-            <li class="">Schedule</li>
-            <li class="">Notes</li>
-            <li class=""></li>
-            <li class=""></li>
+            <li class="hover:text-gray-600 font-medium hover:cursor-pointer">
+              Dashboard
+            </li>
+            <li class="hover:text-gray-600 font-medium hover:cursor-pointer">
+              Task
+            </li>
+            <li class="hover:text-gray-600 font-medium hover:cursor-pointer">
+              Candidate
+            </li>
+            <li class="hover:text-gray-600 font-medium hover:cursor-pointer">
+              Performance
+            </li>
+            <li class="hover:text-gray-600 font-medium hover:cursor-pointer">
+              Schedule
+            </li>
+            <li class="hover:text-gray-600 font-medium hover:cursor-pointer">
+              Notes
+            </li>
+            <li
+              class="hover:text-gray-600 font-medium hover:cursor-pointer"
+            ></li>
+            <li
+              class="hover:text-gray-600 font-medium hover:cursor-pointer"
+            ></li>
           </ul>
           <div class="profile flex gap-2">
-            <i class="text-3xl ph ph-chat-circle-text"></i>
-            <i class="text-3xl ph ph-bell"></i>
-            <i class="text-3xl ph ph-user-circle"></i>
+            <!-- icon chat -->
+            <button
+              type="button"
+              class="flex justify-center gap-2 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-400 font-medium rounded-full text-sm px-2.5 py-2.5"
+            >
+              <i class="ph ph-chat-circle-dots text-xl"></i>
+            </button>
+
+            <!-- notification icon -->
+            <button
+              type="button"
+              class="flex justify-center gap-2 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-400 font-medium rounded-full text-sm px-2.5 py-2.5"
+            >
+              <i class="ph ph-bell-simple text-xl"></i>
+            </button>
+
+            <!-- profile icon -->
+            <button
+              type="button"
+              class="flex justify-center gap-2 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-400 font-medium rounded-full text-sm px-2.5 py-2.5"
+            >
+              <i class="ph ph-user text-xl"></i>
+            </button>
+            <!-- <i class="text-3xl ph ph-chat-circle-text"></i> -->
+            <!-- <i class="text-3xl ph ph-bell"></i> -->
+            <!-- <i class="text-3xl ph ph-user-circle"></i> -->
           </div>
         </nav>
 
@@ -466,8 +505,16 @@
             <h3 class="text-black">3 Sessions</h3>
           </span>
           <div class="arrow-btns flex items-center">
-            <i class="ph ph-arrow-circle-left text-5xl"></i>
-            <i class="ph ph-arrow-circle-right text-5xl"></i>
+            <!-- <i class="ph ph-arrow-circle-left text-5xl"></i> -->
+            <!-- <i class="ph ph-arrow-circle-right text-5xl"></i> -->
+
+            <button
+              type="button"
+              class="flex justify-center gap-2 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-400 font-medium rounded-full text-sm px-2.5 py-2.5"
+            >
+              <!-- <i class="ph ph-arrows-out-simple text-xl"></i> -->
+              <i class="ph ph-arrow-up-right text-xl"></i>
+            </button>
           </div>
         </div>
 
@@ -544,8 +591,16 @@
             <h3 class="text-black">3 Jobs</h3>
           </span>
           <div class="arrow-btns flex items-center">
-            <i class="ph ph-arrow-circle-left text-5xl"></i>
-            <i class="ph ph-arrow-circle-right text-5xl"></i>
+            <!-- <i class="ph ph-arrow-circle-left text-5xl"></i> -->
+            <!-- <i class="ph ph-arrow-circle-right text-5xl"></i> -->
+
+            <button
+              type="button"
+              class="flex justify-center gap-2 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-400 font-medium rounded-full text-sm px-2.5 py-2.5"
+            >
+              <!-- <i class="ph ph-arrows-out-simple text-xl"></i> -->
+              <i class="ph ph-arrow-up-right text-xl"></i>
+            </button>
           </div>
         </div>
 
